# Simple_ClientServer

./: .gitignore  CMakeLists.txt  LICENSE  README.MD
client/: MainConsole.cpp  MainConsole.hpp  README.MD  SessionClient.cpp  SessionClient.hpp  SessionTcp.cpp  SessionTcp.hpp  SessionUdp.cpp  SessionUdp.hpp  console_state.h  main.cpp  session_result.h
server/: ClientSession.cpp  ClientSession.hpp  Server.cpp  Server.hpp  Session.cpp  Session.hpp  SessionServer.cpp  SessionServer.hpp  SessionTcp.cpp  SessionTcp.hpp  SessionUdp.cpp  SessionUdp.hpp  TcpSession.cpp  TcpSession.hpp  UdpSession.cpp  UdpSession.hpp  main.cpp  message.cpp  message.h  session_result.h
simple_lib/include/simple_lib/: Session.hpp  common.cpp  common.h  message.h
simple_lib/src/: Session.cpp  common.cpp
